# facetracker

./: README.md
Facetracker/app/: CMakeLists.txt  build.gradle
Facetracker/app/src/androidTest/java/zimmermann/larissa/facetracker/: ExampleInstrumentedTest.java
Facetracker/app/src/main/: AndroidManifest.xml
Facetracker/app/src/main/cpp/: CLM.cc  FCheck.cc  FDet.cc  IO.cc  PAW.cc  PDM.cc  Patch.cc  Tracker.cc  face_tracker.cc  native-lib.cpp  native-lib.old.cpp  native-lib.old3.cpp  nativeact.h
Facetracker/app/src/main/cpp/FaceTracker/: Tracker.h
Facetracker/app/src/main/java/zimmermann/larissa/facetracker/: MainActivity.java
Facetracker/app/src/main/res/layout/: activity_main.xml
Facetracker/app/src/main/res/values/: strings.xml  styles.xml
Facetracker/app/src/test/java/zimmermann/larissa/facetracker/: ExampleUnitTest.java
Facetracker/gradle/wrapper/: gradle-wrapper.properties
Facetracker/openCVLibrary320/: build.gradle
